Home Page / Fixed the issue with place a bid button overflow

--- a/src/styles/sass/base/_base.scss
+++ b/src/styles/sass/base/_base.scss
@@ -248,3 +248,7 @@ input[type="number"]::-webkit-outer-spin-button {
         width: 100% !important;
     }
 }
+
+.white-space-nowrap {
+    white-space: nowrap !important;
+}
